--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "fibers": "^5.0.2",
+    "sass": "^1.54.5",
+    "sass-loader": "^13.0.2",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
